--- a/single.html
+++ b/single.html
@@ -151,6 +151,47 @@
             </div>
         </div>
     </section>
+    
+        <section>
+        <div class="footer--container">
+            <div class="container">
+                <div class="footer row">
+                    <div class="footer--logo col col-md-4 col-sm-12">
+                        <img src="images/IDF.jpg" alt="">
+                        <p>Tel.: +63 2 88161672</p>
+                        <p>Email: <a href="mailto:inquiries@adfiap.org">inquiries@adfiap.org</a></p>
+                        <p>Follow us: <span class="fab fa-2x fa-facebook-square"></span><span
+                                class="fab fa-2x fa-twitter-square"></span><span class="fab fa-2x fa-linkedin"></span>
+                        </p>
+                        <hr class="footer--hr">
+                    </div>
+
+                    <div class="footer--menu col col-md-4 col-sm-12">
+                        <h2>Menu</h2>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="events.html">Events</a></li>
+                        <li><a href="course.html">Courses</a></li>
+                        <li><a href="testimonials.html">Testimonials</a></li>
+                        <li><a href="news.html">News</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                        <hr class="footer--hr">
+                    </div>
+
+                    <div class="footer--subscribe col col-md-4 col-sm-12">
+                        <h2>Subscribe now</h2>
+                        <form>
+                            <label for="name">Name:</label>
+                            <input type="text" id="name">
+                            <label for="email">Email:</label>
+                            <input type="text" id="name">
+                            <button class="btn subscribe--btn">Submit</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script src="js/custom.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
